src/components/Sidebar/sidebar.scss
.dapp-sidebar{
  position: fixed;
  left:0px;
  top:0px;
  min-width: 16%;
  height:100%;
  display:flex;
  flex-flow:column;
  background: rgba(33, 33, 33, 0.5);
  font-family: 'Square'
}

.branding-header {
  display: block;
  text-align: center;
  font-family: 'Square'
}

.branding-header-icon {
  width: 100px;
  padding:0.5rem 1.2rem;
  filter:invert(1);
  display: block;
  margin: 0 auto;
}

.dapp-menu-top a {
  line-height: 0;
}

.dapp-menu-top {
  width: 100%;
  font-size: 28px;
  align-items: center;
  text-decoration: none;
  padding: 10px;
  .branding-header {
    padding: 0 1em;
  }
  a {
    display: block;
    vertical-align: middle;
    h3 {
      display: inline-block;
      vertical-align: middle;
      color: white;
      font-weight: bold;
      margin: 0;
    }
  }
}

.dapp-nav {
  display: flex;
  flex-flow: column;
}

.button-dapp-menu{
  display:flex;
  //border-radius:2rem;
  font-weight: normal !important;
  // @extend .button-secondary;
  font-family: 'Square', 'cursive';
  height: auto;
  line-height: 52px;
  color: #fff;
  text-decoration: none;
  font-size: 16px;
  svg {
    height: 100%;
  }
  // &.active {
  //   // color: #CC3B66;
  //   font-weight: bold;
  // }
}

.dapp-nav a {
  padding: 0 15%;
  background: transparent;
}

.dapp-nav a:hover {
  background:url(../../assets/menu-item-hover.png) no-repeat left center;
  -webkit-transition: opacity 200ms linear;
  -moz-transition: opacity 200ms linear;
  -o-transition: opacity 200ms linear;
  -ms-transition: opacity 200ms linear;
  transition: opacity 200ms linear;
}

.dapp-menu-external-links {
  display: flex;
  flex-flow: column;
  align-items: center;
  font-weight: 300;
  min-height: 30%;
  a {
    display: block;
    width: 100%;
    padding: 0 15%;
  }
  span {
    margin-left: 1rem;
    height: 100%;
    display: inline-block;
    vertical-align: top;
  }
}

.dapp-menu-data {
  align-items: center;
  display: flex;
  height: auto;
  width: 100%;
  &.rebase {
    justify-content: center;
  }
  &.discount {
    justify-content: left;
  }
}

.bond-discounts {
  text-align: left;
  color: #999999;
  padding-left: calc(16% + 36px);
  p {
    margin-bottom: 1px;
    font-size: .89rem;
  }
  p:first-of-type {
    margin-bottom: 8px;
  }
}

.dapp-menu-social {
  width: 100%;
  display: block;
  flex-flow: column;
  justify-content: center;
  height: 80px;
  position: relative;
  bottom: 0px;
  left: 0px;
}

.social-row {
  display: flex;
  flex-flow: row;
  justify-content: space-evenly;
  padding: 1.5rem;
  a {
    &:hover{
      transform:scale(1.1);
  }
  }
}

